@@ -9,3 +9,4 @@ config.guess
 config.h.in
 config.sub
 ltmain.sh
+aclocal.m4
