@@ -19,7 +19,8 @@ WFMATH_VERSION_INFO=$WFMATH_CURRENT:$WFMATH_REVISION:$WFMATH_AGE
 
 AC_SUBST(WFMATH_VERSION_INFO)
 
-AM_INIT_AUTOMAKE(wfmath, WFMATH_VERSION)
+AM_INIT_AUTOMAKE(wfmath, $WFMATH_VERSION)
+AM_CONFIG_HEADER(config.h)
 
 dnl Checks for programs.
 AC_PROG_CXX
@@ -37,6 +38,8 @@ AM_CONDITIONAL(HAVE_ATLAS, test $found_atlas == yes)
 
 dnl Checks for header files.
 AC_HEADER_STDC
+AC_CHECK_HEADERS(sstream strstream, break,
+		 AC_MSG_ERROR(Couldn't find C++ string <-> stream conversion method.))
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 dnl AC_C_CONST
