@@ -1,3 +1,10 @@
+Wednesday, March 6, 2002	Ron Steinke <rsteinke@w-link.net>
+
+	* Got rid of stupid "set fail bit" on parse errors for
+	  operator>>(), it now throws instead
+	* Added configure check for sstream vs. strstream,
+	  compatibility code
+
 Monday, March 04, 2002	Al Riddoch <alriddoch@zepler.org>
 
 	* wfmath/error.h: Added destructor with throw(); to exception class.
